# dictionary_rs

./: .dockerignore  .env  Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
docker/: .env  Dockerfile
docker-compose/: .env  docker-compose-dev.yml  docker-compose.yml
docker-compose/opensearch/snapshots/: index-0
docker-compose/opensearch/snapshots/indices/-QUmYNUFTvmTgpw70lKhDg/0/: __aUz2QuEoQlC37PkqFctkfA  __emxXNwFnRY6Nz8mJpsCvnw  index-t2lbBOg8QtCUfAbsKU60oA
docker-compose/opensearch/snapshots/indices/1Lq4gpPXT3ayG0FbO84IqA/0/: __1xA8fkkATGOrfIAIBhOWrQ  __2tnMkMI5SSmKooZXOHPVuw  __3en4IVQQQSqF66diINGPIw  __4mr_6mShQhCconnxx-I8hQ  __5fEFIayQS9GLPH-jwAVyJA  __85vgaP0vTgSxpNkn8WAYjg  __87CEKmTPRYqKXt-_hTYK6g  __9YWfHcE2SKOd8duAGg2y9g  __BI432J1NQ0ucdTHD7yZwnw  __BqPIBFsnQA6UAG8gh7xPnA  __GIedlfQ9QoOwANWFUHEV4Q  __GZbYGv1fRfedCZHE_5YHpw  __Gj4WqrhrSPKRTrnklN3YXA  __IN4QEaf_SQ-R63kNoONM1A  __IWky-nh4T3CV07gPGESVBg  __ItAkjgd1S-6zYZSlqIDdyw  __Ix5KPbV6RJ6up5bjt3do-Q  __L4A4CR00RJaW76kl5DOUSA  __MgjAmUKYRJCENZFrQiAf8A  __N3d9whpIQei2jeyku6BUMA  __UTNPD2HiRJ-5-6VUqIT5gw  __V9ABkC6HQyawmzgSb0_92g  __WRinzEI2QRaou4kN-LhmRQ  __Z4r3pCKwQRq2NMoPiQKgWQ  ___L036OFwTtmMUYUj5lGbYg  __buOYRPOUT5aeyrOh24YV_w  __eEgzDihKRO6cP7NEDgAJPQ  __fpxKDreZRjCkxlSjikHkRA  __fzr1Wc-MRd2ApW_docamKQ  __hyCUNja3TJqxRVzyS2qTNA  __jN8uXpQ6TaOge7TAP6wfcg  __lhsxCOJATmCGch4isWpXUw  __nORzxf1cSOScplS94_ghgg  (+8 more)
src/: lib.rs  schema.rs
src/controller/: kafka.rs  mod.rs  opensearch.rs
src/models/: browser.rs  documents.rs  form.rs  generic.rs  menu.rs  menu_item.rs  menu_tree.rs  mod.rs  persistence.rs  process.rs  readers.rs  role.rs  window.rs
(+362 files in other folders)
