[package]
name = "dictionary_rs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.203"
async-trait = "0.1.80"
salvo = { version = "0.68.4", features=["cors"] }
tokio = { version = "1.38.0", features = ["macros"] }
serde_json = "1.0.118"
log = "0.4.21"
simple_logger = "5.0.0"
futures = "0.3.30"
rdkafka = "0.36.2"
opensearch = "2.3.0"

[[bin]]
name = "server"
