[package]
name = "dictionary_rs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.228"
async-trait = "0.1.89"
salvo = { version = "0.84.2", features=["cors"] }
tokio = { version = "1.48.0", features = ["macros"] }
serde_json = "1.0.145"
log = "0.4.27"
simple_logger = "5.0.0"
futures = "0.3.31"
rdkafka = "0.37.0"
opensearch = "2.3.0"

[[bin]]
name = "server"
